--- a/public/output.css
+++ b/public/output.css
@@ -2448,9 +2448,6 @@
   .max-w-2xl {
     max-width: var(--container-2xl);
   }
-  .max-w-3xl {
-    max-width: var(--container-3xl);
-  }
   .max-w-4xl {
     max-width: var(--container-4xl);
   }
@@ -2541,6 +2538,9 @@
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
+  }
+  .gap-1\.5 {
+    gap: calc(var(--spacing) * 1.5);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -2717,20 +2717,14 @@
       border-color: color-mix(in oklab, var(--color-white) 10%, transparent);
     }
   }
-  .bg-base-100\/50 {
+  .bg-base-100\/70 {
     background-color: var(--color-base-100);
     @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-base-100) 50%, transparent);
+      background-color: color-mix(in oklab, var(--color-base-100) 70%, transparent);
     }
   }
   .bg-base-200 {
     background-color: var(--color-base-200);
-  }
-  .bg-base-200\/50 {
-    background-color: var(--color-base-200);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-base-200) 50%, transparent);
-    }
   }
   .bg-black\/10 {
     background-color: color-mix(in srgb, #000 10%, transparent);
@@ -3359,6 +3353,20 @@
     -webkit-user-select: none;
     user-select: none;
   }
+  .input-error {
+    @layer daisyui.l1.l2 {
+      &, &:focus, &:focus-within {
+        --input-color: var(--color-error);
+      }
+    }
+  }
+  .textarea-error {
+    @layer daisyui.l1.l2 {
+      &, &:focus, &:focus-within {
+        --input-color: var(--color-error);
+      }
+    }
+  }
   .toggle-primary {
     @layer daisyui.l1.l2 {
       &:checked, &[aria-checked="true"] {
@@ -3582,11 +3590,6 @@
       flex-direction: row;
     }
   }
-  .md\:pt-12 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 12);
-    }
-  }
   .md\:text-5xl {
     @media (width >= 48rem) {
       font-size: var(--text-5xl);
@@ -3603,11 +3606,9 @@
       display: none;
     }
   }
-  .lg\:pb-0 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 0);
-    }
-  }
+}
+.label {
+  white-space: initial;
 }
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=sunset]:checked),[data-theme=sunset] {
@@ -4115,5 +4116,3 @@
     }
   }
 }
-
- 
